refactor(main): restore cake, mzk icon (optimize mobile)

--- a/projects/intro/src/modules/sound/page/main/main.component.html
+++ b/projects/intro/src/modules/sound/page/main/main.component.html
@@ -142,28 +142,28 @@
       뮤지카 팀에서 동일한 수량의 MZK를 거래소에서 구입합니다.
     </p>
 
-    <!--<table>-->
-      <!--<tr>-->
-        <!--<td class="text-right">-->
-          <!--<div class="circle cake-circle">-->
-            <!--<img src="assets/sound/7_cake.png" width="60">-->
-          <!--</div>-->
-        <!--</td>-->
-        <!--<td>-->
-          <!--<div class="both-side-arrow"></div>-->
-        <!--</td>-->
-        <!--<td class="text-left">-->
-          <!--<div class="circle mzk-circle">-->
-            <!--MZK-->
-          <!--</div>-->
-        <!--</td>-->
-      <!--</tr>-->
-      <!--<tr class="name">-->
-        <!--<td class="text-center">뮤지카 앱 케이크</td>-->
-        <!--<td></td>-->
-        <!--<td class="text-center">MZK 암호화폐</td>-->
-      <!--</tr>-->
-    <!--</table>-->
+    <table>
+      <tr>
+        <td class="text-right">
+          <div class="circle cake-circle">
+            <img src="assets/sound/7_cake.png">
+          </div>
+        </td>
+        <td>
+          <div class="both-side-arrow"></div>
+        </td>
+        <td class="text-left">
+          <div class="circle mzk-circle">
+            MZK
+          </div>
+        </td>
+      </tr>
+      <tr class="name">
+        <td class="text-center">뮤지카 앱 케이크</td>
+        <td></td>
+        <td class="text-center">MZK 암호화폐</td>
+      </tr>
+    </table>
 
   </div>
 </section>
