--- a/projects/intro/src/modules/sound/page/main/main.component.scss
+++ b/projects/intro/src/modules/sound/page/main/main.component.scss
@@ -141,13 +141,18 @@ h4 {
     padding-left: 15px;
 
     h2 {
-      font-weight: 500;
+      font-weight: 300;
+
+      @media (max-width: 738px) {
+        padding-left: 20px;
+      }
     }
 
     h4 {
       margin-bottom: 45px;
       font-weight: 400;
       @media(max-width: 738px) {
+        padding-left: 20px;
         margin-bottom: 30px;
       }
     }
@@ -156,7 +161,8 @@ h4 {
       margin-bottom: 60px;
 
       @media(max-width: 738px) {
-        margin-bottom: 45px;
+        display: block;
+        margin: 0 auto 45px auto;
       }
     }
 
@@ -240,7 +246,7 @@ h4 {
     p {
       font-size: 16px;
       line-height: 23px;
-      font-weight: 300;
+      font-weight: 400;
     }
   }
 
@@ -396,6 +402,10 @@ h4 {
 #first-blockchain {
   padding: 110px 0;
 
+  @media(max-width: 738px) {
+    padding: 60px 0;
+  }
+
   h2 {
     margin-bottom: 22px;
     font-weight: 500;
@@ -421,17 +431,29 @@ h4 {
         padding-top: 26px;
         font-size: 20px;
         font-weight: 500;
+
+        @media (max-width: 738px) {
+          font-size: 16px;
+          font-weight: 400;
+        }
       }
     }
   }
 
   .circle {
+    text-align: center;
     width: 260px;
     height: 260px;
     border-radius: 260px;
-    text-align: center;
     padding-top: 95px;
     margin: 0 auto;
+
+    @media (max-width: 738px) {
+      width: 100px;
+      height: 100px;
+      border-radius: 100px;
+      padding-top: 30px;
+    }
   }
 
   .mzk-circle {
@@ -439,14 +461,30 @@ h4 {
     color: white;
     font-size: 40px;
     font-family: Arial;
+
+    @media (max-width: 738px) {
+      font-size: 22px;
+      padding-top: 33px;
+    }
   }
 
   .cake-circle {
     background: #3f3c56;
+
+    img {
+      width: 60px;
+
+      @media (max-width: 738px) {
+        width: 35px;
+      }
+    }
   }
 
   .both-side-arrow {
     width: 200px;
+    @media(max-width: 738px) {
+      width: 60px;
+    }
     height: 2px;
     background-color: #d4d4d4;
     position: relative;
