feat(main): add cake usage table & optimize mobile

--- a/projects/intro/src/modules/sound/page/main/main.component.html
+++ b/projects/intro/src/modules/sound/page/main/main.component.html
@@ -2,7 +2,7 @@
 
 <div id="sound-main" class="text-center pb-0">
   <h1>처음 만나는 음악 어플<BR/>무료는 시작일 뿐이다</h1>
-  <h3>지금 받으면 평생 무료 (기간 한정)</h3>
+  <h3 class="desktop-only">지금 받으면 평생 무료 (기간 한정)</h3>
   <div class="app-button-group text-center">
     <a class="btn-download">
       <img src="assets/sound/1_google.png"> Google Play
@@ -165,6 +165,28 @@
       </tr>
     </table>
 
+    <table class="cake-usage-table">
+      <thead>
+      <tr>
+        <th>앱 내에서 케이크 구매 </th> <td> 거래소에서 동일한 수량의 MZK를 대신 구매 </td>
+      </tr>
+      <tr>
+        <th>아티스트 후원에 케이크 사용</th> <td> MZK는 후원용 Muzika 지갑에 저장 </td>
+      </tr>
+      <tr>
+        <th>후원 받은 케이크를 각 아티스트에 전달</th> <td> 아티스트의 지갑으로 MZK 송금 (수수료 제외)</td>
+      </tr>
+      <tr>
+        <th>앱 내에서 케이크를 소비하여 추가 기능 이용</th> <td> 뮤지카 팀의 지갑으로 MZK 입금</td>
+      </tr>
+      <tr>
+        <th>크라우드 펀딩 참여</th> <td> 대상 아티스트의 지갑으로 MZK 송금 (수수료 제외) 희망시 뮤지카 팀에서 아티스트로부터 해당 MZK를 구매한 후 원화 또는 비트코인 지급</td>
+      </tr>
+      <tr>
+        <th>활동 보상으로 획득 하였거나, 사용 후 남은 케이크 판매 요청</th> <td> 뮤지카 팀에서 해당 케이크 수량에 해당하는 MZK를 이용자의 ERC-20 지갑으로 입금(수수료 제외)</td>
+      </tr>
+      </thead>
+    </table>
   </div>
 </section>
 
