--- a/projects/intro/src/modules/sound/page/main/main.component.scss
+++ b/projects/intro/src/modules/sound/page/main/main.component.scss
@@ -3,10 +3,17 @@
   background-color: #fafbfc;
 }
 
+@media(max-width: 738px) {
+  .desktop-only {
+    display: none;
+  }
+}
+
 .container {
   width: 1080px;
   @media(max-width: 738px) {
     width: 100%;
+    padding: 0 20px;
   }
 }
 
@@ -16,8 +23,8 @@ h1 {
   font-weight: 300;
 
   @media(max-width: 738px) {
-    font-size: 30px;
-    line-height: 39px;
+    font-size: 25px;
+    line-height: 34px;
   }
 }
 
@@ -27,8 +34,8 @@ h2 {
   font-weight: 300;
 
   @media(max-width: 738px) {
-    font-size: 25px;
-    line-height: 35px;
+    font-size: 24px;
+    line-height: 34px;
   }
 }
 
@@ -46,8 +53,8 @@ h4 {
   line-height: 23px;
 
   @media(max-width: 738px) {
-    font-size: 13px;
-    line-height: 18px;
+    font-size: 15px;
+    line-height: 23px;
   }
 }
 
@@ -57,7 +64,7 @@ h4 {
   background-size: cover;
   height: 690px;
   @media(max-width: 738px) {
-    height: auto;
+    height: 390px;
   }
 
   h1, h3 {
@@ -67,7 +74,8 @@ h4 {
   h1 {
     padding-top: 210px;
     @media(max-width: 738px) {
-      padding-top: 110px;
+      padding-top: 120px;
+      padding-bottom: 30px;
     }
   }
 
@@ -108,11 +116,12 @@ h4 {
     }
 
     @media(max-width: 738px) {
+      display: block;
       width: 130px;
       height: 35px;
       font-size: 13px;
       line-height: 30px;
-      margin-bottom: 80px;
+      margin: 0 auto 15px auto;
 
       img {
         width: 15px;
@@ -142,17 +151,12 @@ h4 {
 
     h2 {
       font-weight: 300;
-
-      @media (max-width: 738px) {
-        padding-left: 20px;
-      }
     }
 
     h4 {
       margin-bottom: 45px;
       font-weight: 400;
       @media(max-width: 738px) {
-        padding-left: 20px;
         margin-bottom: 30px;
       }
     }
@@ -247,6 +251,12 @@ h4 {
       font-size: 16px;
       line-height: 23px;
       font-weight: 400;
+
+      @media (max-width: 738px) {
+        font-size: 15px;
+        margin-top: 13px;
+        margin-bottom: 23px;
+      }
     }
   }
 
@@ -258,9 +268,8 @@ h4 {
       width: 70px;
 
       @media(max-width: 738px) {
-        width: 50px;
+        width: 55px;
         margin-left: 15px;
-        margin-right: 5px;
       }
     }
 
@@ -282,7 +291,7 @@ h4 {
           margin-top: 8px;
           padding: 0;
           max-height: 48px;
-          margin-bottom: 23px;
+          margin-bottom: 27px;
           font-size: 12px;
         }
       }
@@ -299,8 +308,11 @@ h4 {
   }
 
   h1 {
-    font-size: 30px;
     margin-bottom: 45px;
+    @media(max-width: 738px) {
+      margin-bottom: 23px;
+    }
+    text-align: center;
   }
 
   .qna {
@@ -359,7 +371,7 @@ h4 {
     margin-bottom: 26px;
 
     @media(max-width: 738px) {
-      font-size: 23px;
+      font-size: 24px;
     }
   }
 
@@ -416,6 +428,10 @@ h4 {
     font-size: 16px;
     line-height: 23px;
     margin-bottom: 45px;
+
+    @media (max-width: 738px) {
+      font-size: 15px;
+    }
   }
 
   table {
@@ -433,10 +449,29 @@ h4 {
         font-weight: 500;
 
         @media (max-width: 738px) {
-          font-size: 16px;
+          font-size: 15px;
           font-weight: 400;
         }
       }
+    }
+  }
+
+  .cake-usage-table {
+    font-size: 13px;
+
+    th {
+      width: 40%;
+      padding: 16px 10px;
+      border: 1px solid #727270;
+      vertical-align: top;
+    }
+
+    td {
+      width: 60%;
+      color: #727270;
+      border: 1px solid #727270;
+      padding: 16px 10px;
+      vertical-align: top;
     }
   }
 
