--- a/projects/intro/src/modules/sound/component/sound-navbar/sound-navbar.component.scss
+++ b/projects/intro/src/modules/sound/component/sound-navbar/sound-navbar.component.scss
@@ -31,9 +31,6 @@
   > span {
     line-height: $navbar-brand-size;
     font-size: 18px;
-    @media(max-width: 768px) {
-      display: none;
-    }
   }
 }
 
@@ -101,11 +98,13 @@
     /deep/ .muzika-icon-striped-secondary {
       fill: white;
     }
+    @media(max-width: 738px) {
+      margin-right: 10px;
+    }
   }
 
   @media(max-width: 738px) {
-    span {
-      display: none;
-    }
+    padding-right: 15px;
+    margin: 0 auto;
   }
 }
