fix(main): change wording correctly

--- a/projects/intro/src/modules/sound/page/main/main.component.html
+++ b/projects/intro/src/modules/sound/page/main/main.component.html
@@ -168,22 +168,16 @@
     <table class="cake-usage-table">
       <thead>
       <tr>
-        <th>앱 내에서 케이크 구매 </th> <td> 거래소에서 동일한 수량의 MZK를 대신 구매 </td>
+        <th>앱 내에서 케이크 구매 </th> <td> 뮤지카 팀이 거래소에서 대응되는 수량의 MZK를 앱 이용자 대신 구매</td>
       </tr>
       <tr>
-        <th>아티스트 후원에 케이크 사용</th> <td> MZK는 후원용 Muzika 지갑에 저장 </td>
+        <th>아티스트 후원 / 주간 인기 투표에 케이크 사용</th> <td>아티스트의 암호화폐 지갑으로 이용자의 MZK를 전송</td>
       </tr>
       <tr>
-        <th>후원 받은 케이크를 각 아티스트에 전달</th> <td> 아티스트의 지갑으로 MZK 송금 (수수료 제외)</td>
+        <th>에디터 추천 아티스트에게 케이크 선물</th> <td>아티스트의 암호화폐 지갑으로 이용자의 MZK를 전송</td>
       </tr>
       <tr>
-        <th>앱 내에서 케이크를 소비하여 추가 기능 이용</th> <td> 뮤지카 팀의 지갑으로 MZK 입금</td>
-      </tr>
-      <tr>
-        <th>크라우드 펀딩 참여</th> <td> 대상 아티스트의 지갑으로 MZK 송금 (수수료 제외) 희망시 뮤지카 팀에서 아티스트로부터 해당 MZK를 구매한 후 원화 또는 비트코인 지급</td>
-      </tr>
-      <tr>
-        <th>활동 보상으로 획득 하였거나, 사용 후 남은 케이크 판매 요청</th> <td> 뮤지카 팀에서 해당 케이크 수량에 해당하는 MZK를 이용자의 ERC-20 지갑으로 입금(수수료 제외)</td>
+        <th>활동 보상으로 획득했거나 사용 후 남은 케이크 판매</th> <td> 뮤지카 팀에서 MZK를 거래소에서 대신 판매 후 판매액을 앱 이용자에게 지급</td>
       </tr>
       </thead>
     </table>
