refactor(main): redesign cake usage table

--- a/projects/intro/src/modules/sound/page/main/main.component.html
+++ b/projects/intro/src/modules/sound/page/main/main.component.html
@@ -1,8 +1,8 @@
 <app-sound-navbar [stickOnTop]="true"></app-sound-navbar>
 
 <div id="sound-main" class="text-center pb-0">
-  <h1>처음 만나는 음악 어플<BR/>무료는 시작일 뿐이다</h1>
-  <h3 class="desktop-only">지금 받으면 평생 무료 (기간 한정)</h3>
+  <h1>{{'sound.main-title-1' | translate}}<BR/>{{'sound.main-title-2' | translate}}</h1>
+  <h3 class="desktop-only">{{'sound.main-desc' | translate}}</h3>
   <div class="app-button-group text-center">
     <a class="btn-download">
       <img src="assets/sound/1_google.png"> Google Play
