refactor(streaming): support streaming sound intro website

--- a/projects/intro/src/modules/sound/page/main/main.component.html
+++ b/projects/intro/src/modules/sound/page/main/main.component.html
@@ -4,7 +4,7 @@
   <h1>{{'sound.main-title-1' | translate}}<BR/>{{'sound.main-title-2' | translate}}</h1>
   <h3 class="desktop-only">{{'sound.main-desc' | translate}}</h3>
   <div class="app-button-group text-center">
-    <a class="btn-download">
+    <a (click)="open()" class="btn-download">
       <img src="assets/sound/1_google.png"> Google Play
     </a>
     <a class="btn-download">
